Fix explore menu z-index

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -185,7 +185,7 @@ body {
     padding: 10px 20px;
     position: sticky;
     top: 10;
-    z-index: 1000;
+    z-index: 50;
     box-shadow: 0px 4px 6px #f8f9fa;
     display: flex;
     justify-content: center;
